# OTU-SpeechRecognitionTest

./: .env-example  .gitignore  README.md  pyproject.toml  sitecustomize.py
data/fr-ca/: transcriptions.txt
docker/tts/chatterbox/: Dockerfile  run_chatterbox.py
docker/tts/cosyvoice2/: Dockerfile  run_cosyvoice2.py
docker/tts/dia2/: Dockerfile  run_dia2.py
docker/tts/f5tts/: Dockerfile  run_f5tts.py
docker/tts/glmtts/: Dockerfile  run_glmtts.py
docker/tts/orpheus/: Dockerfile  run_orpheus.py
docker/tts/qwen3tts/: Dockerfile  run_qwen3tts.py
docker/tts/voxcpm/: Dockerfile  run_voxcpm.py
docker/tts/xtts/: Dockerfile  run_xtts.py
scripts/: convert-tts-samples-to-mp3.ps1  install-backends.ps1  install-tts-backends.ps1  run-benchmark.ps1  run-tts-benchmark.ps1
src/asr_bench/: __init__.py  adapters.py  cli.py  config.py  dataset.py  metrics.py
src/tts_bench/: __init__.py  adapters.py  cli.py  config.py  dataset.py  docker_runtime.py
tools/vibevoice/: run_vibevoice.py
