[project]
name = "asr-bench"
version = "0.1.0"
description = "Benchmark open-source ASR models against local speech datasets."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "jiwer>=3.0,<4.0",
  "numpy>=1.26,<3.0",
  "soundfile>=0.12,<1.0",
]

[project.optional-dependencies]
whisper = [
  "openai-whisper>=20240930",
  "torch>=2.2,<3.0",
]
moonshine = [
  "useful-moonshine-onnx>=20241016",
]
nemo = [
  "nemo_toolkit[asr]>=2.0.0",
]
espnet = [
  "espnet>=202402",
  "espnet_model_zoo>=0.1.7",
  "librosa>=0.10,<1.0",
]
funasr = [
  "funasr>=1.1.0",
]

[project.scripts]
asr-bench = "asr_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr_bench"]
