[project]
name = "asr-bench"
version = "0.1.0"
description = "Benchmark open-source ASR and TTS models against local speech datasets."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "jiwer>=3.0,<4.0",
  "numpy>=1.26,<3.0",
  "soundfile>=0.12,<1.0",
]

[project.optional-dependencies]
whisper = [
  "openai-whisper>=20240930",
  "torch>=2.2,<3.0",
]
moonshine = [
  "useful-moonshine-onnx>=20241016",
]
nemo = [
  "nemo_toolkit[asr]>=2.0.0",
]
espnet = [
  "espnet>=202402",
  "espnet_model_zoo>=0.1.7",
  "librosa>=0.10,<1.0",
]
funasr = [
  "funasr>=1.1.0",
]
kokoro = [
  "kokoro>=0.9.4",
]
chatterbox = [
  "chatterbox-tts>=0.1.7",
]
f5tts = [
  "f5-tts>=1.1.18",
]
xtts = [
  "TTS>=0.22.0",
]
kittentts = [
  "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
]

[project.scripts]
asr-bench = "asr_bench.cli:main"
tts-bench = "tts_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr_bench", "src/tts_bench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
conflicts = [
  [
    { extra = "chatterbox" },
    { extra = "espnet" },
  ],
  [
    { extra = "xtts" },
    { extra = "espnet" },
  ],
]
